--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100vh;
       background: radial-gradient(circle at top, #ffd6e0, #ff8fa3);
       display: flex;
       align-items: center;
@@ -21,13 +21,13 @@
       overflow: hidden;
     }
 
-    /* 🌧️ Falling hearts */
+    /* Falling hearts */
     .heart {
       position: fixed;
       top: -10px;
-      color: rgba(255, 77, 109, 0.85);
       pointer-events: none;
       animation: fall linear forwards;
+      opacity: 0.85;
     }
 
     @keyframes fall {
@@ -37,10 +37,10 @@
       }
     }
 
-    /* 💕 Main page GIF */
+    /* Main GIF */
     .main-gif {
       position: absolute;
-      top: 30px;
+      top: 20px;
       width: 100%;
       display: flex;
       justify-content: center;
@@ -49,129 +49,105 @@
     }
 
     .main-gif img {
-      width: 220px;
+      width: 200px;
       max-width: 70%;
-      border-radius: 20px;
-      opacity: 0.95;
+      border-radius: 18px;
       animation: floatSoft 3s ease-in-out infinite;
     }
 
     @keyframes floatSoft {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    /* 💌 Card */
-    .card {
-      background: white;
-      width: min(94%, 520px);
-      padding: 56px 44px;
-      border-radius: 32px;
-      box-shadow: 0 50px 100px rgba(0, 0, 0, 0.28);
-      text-align: center;
-      position: relative;
-      z-index: 10;
-      animation: cardFloat 4s ease-in-out infinite;
-    }
-
-    @keyframes cardFloat {
-      0%, 100% { transform: translateY(0); }
+      0%,100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
 
+    /* Card */
+    .card {
+      background: white;
+      width: min(94%, 520px);
+      padding: 52px 36px;
+      border-radius: 30px;
+      box-shadow: 0 40px 80px rgba(0,0,0,0.25);
+      text-align: center;
+      position: relative;
+      z-index: 10;
+    }
+
     .emoji {
-      font-size: 60px;
-      margin-bottom: 14px;
+      font-size: 56px;
+      margin-bottom: 12px;
     }
 
     h1 {
-      font-size: 30px;
-      margin: 14px 0 36px;
+      font-size: 28px;
+      margin-bottom: 30px;
       color: #333;
-      line-height: 1.3;
     }
 
+    /* Button area = movement boundary */
     .buttons {
       position: relative;
-      height: 90px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      width: 100%;
+      height: 110px;
     }
 
     button {
-      padding: 18px 38px;
+      padding: 16px 34px;
       font-size: 18px;
       border-radius: 999px;
       border: none;
       cursor: pointer;
       user-select: none;
+      touch-action: manipulation;
     }
 
     #yes {
       background: linear-gradient(135deg, #ff4d6d, #ff758f);
       color: white;
-      box-shadow: 0 14px 30px rgba(255, 77, 109, 0.5);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    #yes:hover {
-      transform: scale(1.1);
-      box-shadow: 0 18px 36px rgba(255, 77, 109, 0.6);
+      box-shadow: 0 12px 26px rgba(255,77,109,0.45);
+      position: relative;
+      z-index: 2;
     }
 
     #no {
-      background: #f3f3f3;
+      background: #f2f2f2;
       color: #555;
       position: absolute;
+      left: 50%;
+      top: 55%;
+      transform: translate(-50%, -50%);
       transition:
-        left 0.45s cubic-bezier(0.25, 1.4, 0.5, 1),
-        top 0.45s cubic-bezier(0.25, 1.4, 0.5, 1),
-        transform 0.2s ease;
-    }
-
-    #no:hover {
-      transform: scale(0.95);
+        left 0.35s cubic-bezier(0.25, 1.4, 0.5, 1),
+        top 0.35s cubic-bezier(0.25, 1.4, 0.5, 1);
     }
 
     .message {
-      margin-top: 34px;
+      display: none;
+      margin-top: 28px;
       font-size: 22px;
       color: #ff4d6d;
-      display: none;
-      animation: pop 0.4s ease forwards;
     }
 
     #yesGif {
       display: none;
       width: 100%;
-      max-width: 320px;
-      margin: 30px auto 0;
-      border-radius: 22px;
+      max-width: 300px;
+      margin: 24px auto 0;
+      border-radius: 20px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.25);
-      animation: pop 0.5s ease forwards;
-    }
-
-    @keyframes pop {
-      from { transform: scale(0.85); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
 <body>
 
-  <!-- 💕 Main GIF -->
   <div class="main-gif">
-    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHY0ZG1na3FuenZqZnRhYXNnZmtjaTJhaW41ZDZ6NXNucTYxZWo3diZlcD12MV9naWZzX3NlYXJjaCZjdD1n/tk8cksLHlE7Gpo5lSI/giphy.gif" alt="Love GIF">
+    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHY0ZG1na3FuenZqZnRhYXNnZmtjaTJhaW41ZDZ6NXNucTYxZWo3diZlcD12MV9naWZzX3NlYXJjaCZjdD1n/tk8cksLHlE7Gpo5lSI/giphy.gif">
   </div>
 
-  <!-- 💌 Card -->
   <div class="card">
     <div class="emoji">💖</div>
     <h1>Rania, will you be my Valentine?</h1>
-    <h2>i know even if you want you cant press 'No' hehe</h2>
 
-    <div class="buttons">
+    <div class="buttons" id="buttonZone">
       <button id="yes">Yes 💕</button>
       <button id="no">No 🙃</button>
     </div>
@@ -180,53 +156,48 @@
       I knew your heart would say yes 💞
     </div>
 
-    <!-- 🎉 YES GIF -->
-    <img
-      id="yesGif"
-      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHY0ZG1na3FuenZqZnRhYXNnZmtjaTJhaW41ZDZ6NXNucTYxZWo3diZlcD12MV9naWZzX3NlYXJjaCZjdD1n/D9j761FH8SYJLyW9WO/giphy.gif"
-      alt="Celebration GIF"
-    />
+    <img id="yesGif"
+      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHY0ZG1na3FuenZqZnRhYXNnZmtjaTJhaW41ZDZ6NXNucTYxZWo3diZlcD12MV9naWZzX3NlYXJjaCZjdD1n/D9j761FH8SYJLyW9WO/giphy.gif">
   </div>
 
   <script>
     const noBtn = document.getElementById('no');
     const yesBtn = document.getElementById('yes');
+    const zone = document.getElementById('buttonZone');
     const message = document.getElementById('message');
     const yesGif = document.getElementById('yesGif');
-    const card = document.querySelector('.card');
 
-    function moveNoButton() {
-      const rect = card.getBoundingClientRect();
-      const padding = 20;
+    function moveNo() {
+      const zoneRect = zone.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
 
-      const maxX = rect.width - noBtn.offsetWidth - padding;
-      const maxY = rect.height - noBtn.offsetHeight - padding;
+      const padding = 10;
+      const maxX = zoneRect.width - btnRect.width - padding;
+      const maxY = zoneRect.height - btnRect.height - padding;
 
-      const x = Math.random() * maxX + padding / 2;
-      const y = Math.random() * maxY + padding / 2;
+      const x = Math.random() * maxX;
+      const y = Math.random() * maxY;
 
-      noBtn.style.left = `${x}px`;
-      noBtn.style.top = `${y}px`;
+      noBtn.style.left = x + 'px';
+      noBtn.style.top = y + 'px';
+      noBtn.style.transform = 'none';
     }
 
-    moveNoButton();
-    noBtn.addEventListener('mouseenter', moveNoButton);
-    noBtn.addEventListener('touchstart', moveNoButton);
+    // Desktop
+    noBtn.addEventListener('mouseenter', moveNo);
+
+    // Mobile: finger proximity
+    zone.addEventListener('touchmove', moveNo, { passive: true });
 
     yesBtn.addEventListener('click', () => {
-      message.style.display = 'block';
-      yesGif.style.display = 'block';
       yesBtn.style.display = 'none';
       noBtn.style.display = 'none';
+      message.style.display = 'block';
+      yesGif.style.display = 'block';
 
       const subject = encodeURIComponent("She said YES ❤️");
       const body = encodeURIComponent(
-        "Hi Moeez,\n\n" +
-        "I just wanted you to know that…\n\n" +
-        "Yes. ill be your valentine💕\n\n" +
-        "Happy Valentine’s Day.\n" +
-        "You made me smile today.\n\n" +
-        "— Rania 💖"
+        "Hi Moeez,\n\nYes. 💕\n\nHappy Valentine’s Day.\n\n— Rania 💖"
       );
 
       setTimeout(() => {
@@ -235,19 +206,19 @@
       }, 2500);
     });
 
-    function createHeart() {
-      const heart = document.createElement('div');
-      heart.className = 'heart';
-      heart.innerText = Math.random() > 0.5 ? '💖' : '❤️';
-      heart.style.left = Math.random() * 100 + 'vw';
-      heart.style.fontSize = 16 + Math.random() * 26 + 'px';
-      heart.style.animationDuration = 3 + Math.random() * 3 + 's';
-
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 6000);
+    // Hearts rain
+    function heartRain() {
+      const h = document.createElement('div');
+      h.className = 'heart';
+      h.innerText = Math.random() > 0.5 ? '💖' : '❤️';
+      h.style.left = Math.random() * 100 + 'vw';
+      h.style.fontSize = 14 + Math.random() * 26 + 'px';
+      h.style.animationDuration = 3 + Math.random() * 3 + 's';
+      document.body.appendChild(h);
+      setTimeout(() => h.remove(), 6000);
     }
 
-    setInterval(createHeart, 220);
+    setInterval(heartRain, 260);
   </script>
 
 </body>
